# Indigo

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.conan/profiles/: emscripten-asmjs.profile  emscripten-wasm.profile
api/: CMakeLists.txt  indigo-version.cmake  make-dotnet-wrappers.py  make-java-wrappers.py  make-python-wrappers.py
api/bingo-nosql/: CMakeLists.txt
api/bingo-nosql/src/: bingo.cpp
api/c/bingo-nosql/src/: bingo_matcher.cpp
api/c/tests/unit/bingo-nosql/: bingo_nosql_test.cpp
api/cpp/indigo/: CMakeLists.txt
api/cpp/indigo-inchi/: CMakeLists.txt
api/cpp/indigo-inchi/tests/: CMakeLists.txt
api/cpp/indigo-renderer/: CMakeLists.txt
api/cpp/indigo-renderer/src/: indigo_render2d.cpp
api/cpp/indigo-renderer/tests/: indigo-renderer-test.c
api/cpp/indigo/src/: indigo_internal.h
api/dotnet/: CMakeLists.txt  Indigo.Net.sln
api/dotnet/src/: Indigo.Net.csproj
api/dotnet/tests/: Indigo.Net.Tests.csproj
api/indigo/: CMakeLists.txt
api/indigo-inchi/: CMakeLists.txt
api/indigo-renderer/: CMakeLists.txt
api/indigo/src/: indigo_misc.cpp
api/indigo/tests/: CMakeLists.txt
api/java/: CMakeLists.txt  pom.xml
api/plugins/bingo/: CMakeLists.txt
api/plugins/bingo/python/: bingo.py
api/plugins/inchi/: CMakeLists.txt
api/plugins/inchi/python/: indigo_inchi.py
api/plugins/renderer/: CMakeLists.txt
api/plugins/renderer/python/: indigo_renderer.py
api/plugins/renderer/tests/c/: indigo-renderer-test.c
api/python/: CMakeLists.txt  copy-libs.py  indigo.py  setup.py
api/python/indigo/: __init__.py
api/src/: indigo_internal.h
api/tests/c/: CMakeLists.txt  dlopen-test.c
api/tests/dotnet/: Indigo.Net.Tests.csproj
api/wasm/: CMakeLists.txt  indigo.js
api/wasm/indigo-wasm/: CMakeLists.txt
api/wasm/ketcher/: CMakeLists.txt  indigo-ketcher.cpp  indigo.js  test.js
bingo/: CMakeLists.txt
bingo/bingo-core/: CMakeLists.txt
bingo/bingo-core-c/: CMakeLists.txt
bingo/postgres/: CMakeLists.txt
build_scripts/: bingo-release.py  indigo-make-by-libs.py  indigo-release-libs.py  indigo-release-utils.py
build_scripts/bingo/: CMakeLists.txt
build_scripts/bingo-oracle/: CMakeLists.txt
build_scripts/bingo-postgres/: CMakeLists.txt
build_scripts/bingo-sqlserver/: CMakeLists.txt
build_scripts/indigo/: CMakeLists.txt
build_scripts/indigo-all/: CMakeLists.txt
build_scripts/indigo-inchi/: CMakeLists.txt
build_scripts/indigo-renderer/: CMakeLists.txt
build_scripts/indigo-utils/: CMakeLists.txt
cmake/: setup.cmake
common/: CMakeLists.txt
common/base_c/: defs.h
common/cmake/: GetSystemVersion.cmake  MacFrameworks.cmake  SetBuildParameters.cmake
core/: CMakeLists.txt
core/indigo-core/: CMakeLists.txt
core/indigo-core/common/: CMakeLists.txt
core/indigo-core/common/base_cpp/: exception.cpp
core/indigo-core/graph/: CMakeLists.txt
core/indigo-core/layout/: CMakeLists.txt
core/indigo-core/reaction/: CMakeLists.txt
core/render2d/: CMakeLists.txt  render_context.h
core/render2d/src/: render_context.cpp  render_fonts.cpp  render_single.cpp
render2d/: CMakeLists.txt  render_context.h
render2d/src/: render_context.cpp  render_fonts.cpp
src/: CMakeLists.txt
src/core/indigo-core/: CMakeLists.txt
src/core/indigo-core/molecule/: CMakeLists.txt
src/core/render2d/: CMakeLists.txt  render_common.h
src/core/render2d/src/: render_context.cpp  render_fonts.cpp  render_single.cpp
utils/indigo-deco/: CMakeLists.txt
utils/indigo-depict/: CMakeLists.txt
