cmake_minimum_required(VERSION 3.4)

project(api)

if (BUILD_INDIGO)
    add_subdirectory(indigo)
    if (BUILD_INDIGO_INCHI)
        add_subdirectory(indigo-inchi)
    endif ()
    if (BUILD_INDIGO_RENDERER)
        add_subdirectory(indigo-renderer)
    endif ()
    if (BUILD_BINGO_NOSQL)
        add_subdirectory(bingo-nosql)
    endif ()
    if (TEST)
        add_subdirectory(tests/c)
    endif ()
endif ()
