if (BUILD_BINGO_POSTGRES OR BUILD_BINGO_ORACLE OR BUILD_BINGO_MSSQL)
    include(${CMAKE_CURRENT_SOURCE_DIR}/bingo-version.cmake)
    message(STATUS "Bingo version is ${BINGO_VERSION}")

    add_subdirectory(bingo-core)
    add_subdirectory(bingo-core-c)
    if (BUILD_BINGO_POSTGRES)
        add_subdirectory(postgres)
    endif()
    set(PACKAGE_COMMANDS "${PACKAGE_COMMANDS}" PARENT_SCOPE)
endif()
