add_subdirectory(indigo-core)
if (BUILD_SELF_SUFFICIENT)
    # InChI don't have a Conan package yet
    add_subdirectory(third_party/inchi)
    if (NOT BUILD_SELF_SUFFICIENT_CONAN)
        add_subdirectory(third_party/rapidjson)
        add_subdirectory(third_party/zlib)
        add_subdirectory(third_party/tinyxml)
    endif()
endif()
if (BUILD_INDIGO_RENDERER OR BUILD_INDIGO_UTILS)
    if (BUILD_SELF_SUFFICIENT AND NOT BUILD_SELF_SUFFICIENT_CONAN)
        add_subdirectory(third_party/libpng)
        add_subdirectory(third_party/pixman)
        add_subdirectory(third_party/cairo)
    endif()
    add_subdirectory(render2d)
endif ()
